modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -1,4 +1,4 @@
-#!MANAGED-CONFIG https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc interval=43200 strict=true
+#!MANAGED-CONFIG https://cdn.jsdelivr.net/gh/zuluion/Surfboard-Template-Config@master/Surfboard-Template-Config.conf interval=60 strict=true # subscribe profile url and auto update config
 [General]
 # Specify dns server used by application
 dns-server = 223.5.5.5, 1.1.1.1, 8.8.8.8,system
