--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -13,7 +13,7 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 proxy-test-url = http://cp.cloudflare.com
 
 # Test url used by url-test and manually node speed test. Direct proxy will use this url.
-internet-test-url = http://cp.cloudflare.com
+internet-test-url = http://wifi.vivo.com.cn/generate_204
 
 # Timeout for all connectivity test
 test-timeout = 30
@@ -47,7 +47,7 @@ localhost = 127.0.0.1
 # bar.com = server:8.8.8.8
 [Panel]
 SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
-# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+SubscribeInfo = title=少数派订阅信息, content=上传流量：15.69GB\n下载流量：759.23GB\n剩余流量：774.92GB\n套餐流量：1200GB\n到期时间：2025-02-01 12:16:31, style=info
 
 [Proxy]
 # build in policy
