modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -75,6 +75,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 🚀直连 = select,DIRECT, hidden=true
 
 [Rule]
+DOMAIN-SUFFIX,f-droid.org, 🌏整合
 DOMAIN-KEYWORD,gemini, 🇺🇸美国
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 🌏整合
