modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -1,10 +1,14 @@
-#!MANAGED-CONFIG https://cdn.jsdelivr.net/gh/zuluion/Surfboard-Template-Config@master/Surfboard-Template-Config.conf interval=60 strict=true # subscribe profile url and auto update config
+#!MANAGED-CONFIG https://cdn.jsdelivr.net/gh/zuluion/Surfboard-Template-Config@master/Surfboard-Template-Config.conf interval=60 strict=true # subscribe 
+#!MANAGED-CONFIG https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33 interval=43200 strict=true
+#!MANAGED-CONFIG https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc interval=43200 strict=true
+
+profile url and auto update config
 [General]
 # Specify dns server used by application
-dns-server = 223.5.5.5, 1.1.1.1, 8.8.8.8,system
+dns-server = 223.5.5.5, 1.1.1.1, 8.8.8.8, 114.114.114.114
 
 # Specify doh server used by application
-doh-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,https://9.9.9.9/dns-query
+# doh-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,https://9.9.9.9/dns-query
 
 # Specify route rule and domain rule, matching traffic will not be redirected or rejected.
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.crashlytics.com, *.local,captive.apple.com, www.baidu.com //444
@@ -16,13 +20,13 @@ proxy-test-url = http://cp.cloudflare.com
 internet-test-url = http://wifi.vivo.com.cn/generate_204
 
 # Timeout for all connectivity test
-test-timeout = 30
+test-timeout = 5
 
 # Match domain won't get fake ip dns response
 always-real-ip = *.lan,*.localdomain,*.example,*.invalid,*.localhost,*.test,*.local,*.home.arpa,time.*.com,time.*.gov,time.*.edu.cn,time.*.apple.com,time1.*.com,time2.*.com,time3.*.com,time4.*.com,time5.*.com,time6.*.com,time7.*.com,ntp.*.com,ntp1.*.com,ntp2.*.com,ntp3.*.com,ntp4.*.com,ntp5.*.com,ntp6.*.com,ntp7.*.com,*.time.edu.cn,*.ntp.org.cn,+.pool.ntp.org,time1.cloud.tencent.com,music.163.com,*.music.163.com,*.126.net,musicapi.taihe.com,music.taihe.com,songsearch.kugou.com,trackercdn.kugou.com,*.kuwo.cn,api-jooxtt.sanook.com,api.joox.com,joox.com,y.qq.com,*.y.qq.com,streamoc.music.tc.qq.com,mobileoc.music.tc.qq.com,isure.stream.qqmusic.qq.com,dl.stream.qqmusic.qq.com,aqqmusic.tc.qq.com,amobile.music.tc.qq.com,*.xiami.com,*.music.migu.cn,music.migu.cn,*.msftconnecttest.com,*.msftncsi.com,msftconnecttest.com,msftncsi.com,localhost.ptlogin2.qq.com,localhost.sec.qq.com,+.srv.nintendo.net,+.stun.playstation.net,xbox.*.microsoft.com,*.*.xboxlive.com,+.battlenet.com.cn,+.wotgame.cn,+.wggames.cn,+.wowsgame.cn,+.wargaming.net,proxy.golang.org,stun.*.*,stun.*.*.*,+.stun.*.*,+.stun.*.*.*,+.stun.*.*.*.*,heartbeat.belkin.com,*.linksys.com,*.linksyssmartwifi.com,*.router.asus.com,mesu.apple.com,swscan.apple.com,swquery.apple.com,swdownload.apple.com,swcdn.apple.com,swdist.apple.com,lens.l.google.com,stun.l.google.com,+.nflxvideo.net,*.square-enix.com,*.finalfantasyxiv.com,*.ffxiv.com,*.mcdn.bilivideo.cn
 
 # Establish a http proxy server on your device and provide proxy service in specified ip
-http-listen = 0.0.0.0:1234
+# http-listen = 0.0.0.0:1234
 
 # Establish a socks5 proxy server on your device and provide proxy service in specified ip
 socks5-listen = 127.0.0.1:1235
@@ -86,5 +90,39 @@ RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Google.list, 🌏整合
 RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸美国
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list,DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list,DIRECT
+
+# 常规广告
+DOMAIN-KEYWORD,admarvel,REJECT-TINYGIF
+DOMAIN-KEYWORD,admaster,REJECT-TINYGIF
+DOMAIN-KEYWORD,adsage,REJECT-TINYGIF
+DOMAIN-KEYWORD,adsmogo,REJECT-TINYGIF
+DOMAIN-KEYWORD,adsrvmedia,REJECT-TINYGIF
+DOMAIN-KEYWORD,adwords,REJECT-TINYGIF
+DOMAIN-KEYWORD,adservice,REJECT-TINYGIF
+DOMAIN-SUFFIX,appsflyer.com,REJECT-TINYGIF
+DOMAIN-KEYWORD,domob,REJECT-TINYGIF
+DOMAIN-SUFFIX,doubleclick.net,REJECT-TINYGIF
+DOMAIN-KEYWORD,duomeng,REJECT-TINYGIF
+DOMAIN-KEYWORD,dwtrack,REJECT-TINYGIF
+DOMAIN-KEYWORD,guanggao,REJECT-TINYGIF
+DOMAIN-KEYWORD,lianmeng,REJECT-TINYGIF
+DOMAIN-SUFFIX,mmstat.com,REJECT-TINYGIF
+DOMAIN-KEYWORD,mopub,REJECT-TINYGIF
+DOMAIN-KEYWORD,omgmta,REJECT-TINYGIF
+DOMAIN-KEYWORD,openx,REJECT-TINYGIF
+DOMAIN-KEYWORD,partnerad,REJECT-TINYGIF
+DOMAIN-KEYWORD,pingfore,REJECT-TINYGIF
+DOMAIN-KEYWORD,supersonicads,REJECT-TINYGIF
+DOMAIN-KEYWORD,uedas,REJECT-TINYGIF
+DOMAIN-KEYWORD,umeng,REJECT-TINYGIF
+DOMAIN-KEYWORD,usage,REJECT-TINYGIF
+DOMAIN-SUFFIX,vungle.com,REJECT-TINYGIF
+DOMAIN-KEYWORD,wlmonitor,REJECT-TINYGIF
+DOMAIN-KEYWORD,zjtoolbar,REJECT-TINYGIF
+
+# 剩余未匹配的国内网站
+DOMAIN-SUFFIX,cn,DIRECT
+DOMAIN-KEYWORD,-cn,DIRECT
+GEOIP,US,🇺🇸美国
 GEOIP,CN,DIRECT
-FINAL,DIRECT
+FINAL,🌏整合
