modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -8,7 +8,7 @@ profile url and auto update config
 dns-server = 223.5.5.5, 1.1.1.1, 8.8.8.8, 114.114.114.114
 
 # Specify doh server used by application
-# doh-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,https://9.9.9.9/dns-query
+# doh-server = https://dns.alidns.com/dns-query,https://cloudflare-dns.com/dns-query,https://dns.google/dns-query
 
 # Specify route rule and domain rule, matching traffic will not be redirected or rejected.
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.crashlytics.com, *.local,captive.apple.com, www.baidu.com //444
@@ -78,18 +78,24 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 🚀直连 = select,DIRECT, hidden=true
 
+# 规则定义
+# DOMAIN：严格匹配某域名。
+# DOMAIN-SUFFIX：匹配某域名及其子域名，如 DOMAIN-SUFFIX,apple.com 可以匹配 apple.com 和 www.apple.com，但是不会匹配 anapple.com。
+# DOMAIN-KEYWORD：简单的字符串搜索，只要域名包含子串就会匹配。
+# DOMAIN-SET：专为大量域名集列表文件设计，支持上万条记录的快速查询。文件中每行为一个域名，如果某行以 . 开头则表示匹配所有子域名和该域名本身。可用于广告过滤。
+
 [Rule]
 DOMAIN-SUFFIX,f-droid.org, 🌏整合
 DOMAIN-KEYWORD,gemini, 🇺🇸美国
-RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt,DIRECT
-RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 🌏整合
+DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt, DIRECT
+DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 🌏整合
 RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Google.list, 🌏整合
 RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸美国
-RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list,DIRECT
-RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list,DIRECT
+DOMAIN-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list, DIRECT
+DOMAIN-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list, DIRECT
 
 # 常规广告
 DOMAIN-KEYWORD,admarvel,REJECT-TINYGIF
