modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -88,14 +88,14 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 DOMAIN-SUFFIX,f-droid.org, 🌏整合
 DOMAIN-KEYWORD,gemini, 🇺🇸美国
 DOMAIN-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/AI.list, 🇺🇸美国
-DOMAIN-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/ProxyGFW.list, 🌏整合
+RULE-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/ProxyGFW.list, 🌏整合
 RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 🌏整合
 RULE-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/Google.list, 🌏整合
 RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸美国
-DOMAIN-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list, DIRECT
-DOMAIN-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list, DIRECT
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list, DIRECT
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list, DIRECT
 RULE-SET,https://github.com/VirgilClyne/GetSomeFries/raw/main/ruleset/ASN.China.list,DIRECT
 
 # 常规广告
