modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -64,15 +64,15 @@ SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api
 
 FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
 
-🔰 全局代理 = select, 🌏整合, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连
+🔰 全局代理 = select, 🌏整合, 🇭🇰HK, 🇺🇸USA, 🇯🇵JP, 🚀直连
 
 🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG|日本|JPN, interval=600, tolerance=80
 
-🇭🇰香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG, interval=600, tolerance=80
+🇭🇰HK = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG, interval=600, tolerance=80
 
-🇺🇸美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)美国|USA, interval=600, tolerance=80
+🇺🇸USA = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)美国|USA, interval=600, tolerance=80
 
-🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)(日本|JPN), interval=600, tolerance=80
+🇯🇵JP = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)(日本|JPN), interval=600, tolerance=80
 
 # 🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=^((?!香港|HKG|美国|USA|日本|JPY|新加坡|SGP|TWN|台湾|).)*$, interval=600, tolerance=80
 
@@ -86,14 +86,14 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 [Rule]
 DOMAIN-SUFFIX,f-droid.org, 🌏整合
-DOMAIN-KEYWORD,gemini, 🇺🇸美国
-DOMAIN-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/AI.list, 🇺🇸美国
+DOMAIN-KEYWORD,gemini, 🇺🇸USA
+DOMAIN-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/AI.list, 🇺🇸USA
 RULE-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/ProxyGFW.list, 🌏整合
 RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 🌏整合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 🌏整合
 RULE-SET,https://raw.githubusercontent.com/lonecale/Rules/refs/heads/main/Surge/Rules/Google.list, 🌏整合
-RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸美国
+RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸USA
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list, DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list, DIRECT
 RULE-SET,https://github.com/VirgilClyne/GetSomeFries/raw/main/ruleset/ASN.China.list,DIRECT
@@ -130,6 +130,6 @@ DOMAIN-KEYWORD,zjtoolbar,REJECT-TINYGIF
 # 剩余未匹配的国内网站
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-KEYWORD,-cn,DIRECT
-GEOIP,US,🇺🇸美国
+GEOIP,US,🇺🇸USA
 GEOIP,CN,DIRECT
 FINAL,🌏整合
