modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -62,7 +62,7 @@ REJECT = reject
 [Proxy Group]
 SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
 
-FacMata = url-test, policy-path=https://fm-sub-mainpanel-vygijfogpm.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
+FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
 
 🔰 全局代理 = select, 🌏整合, 🇭🇰HK, 🇺🇸USA, 🇯🇵JP, 🚀直连
 
